# Video-Summarizer

./: .gitignore  main.py  pyproject.toml  ythelper.py
