[project]
name = "yt-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "openai>=2.12.0",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "srt>=3.5.3",
    "tiktoken>=0.12.0",
    "typer>=0.20.0",
    "yt-dlp>=2025.12.8",
]
